--- a/src/styles/components/_helpPage.scss
+++ b/src/styles/components/_helpPage.scss
@@ -36,15 +36,16 @@
             width: 4rem;
             padding: 0.3rem 0.6rem;
             height: fit-content;
-            color:whitesmoke
+            color:black;
+            font-size: 0.8rem;
         }
     }
 
     >div:last-child {
-        margin-bottom: 5rem;
+        margin-bottom: 3rem;
         
         button {
-            color:white;
+            color:black;
         }
     }
 }
