--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -4,8 +4,7 @@
     width: 100vw;
     display: flex;
     padding: 0.5rem 0;
-    background-color: rgba(36, 35, 35, 0.95);
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.95);
 
     >.nav {
         display: flex;
@@ -62,9 +61,9 @@
         >.nav {
             color: white;
 
-            // ion-icon {
-            //     display: none;
-            // }
+            ion-icon {
+                display: none;
+            }
 
             span {
                 font-weight: 300;
