--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -1,18 +1,27 @@
+.overlay-style {
+    position: fixed;
+    top: 0;
+    height: 100vh;
+    width: 100vw;
+    backdrop-filter: blur(5px);
+    overflow: hidden;
+}
+
 .modal-style {
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 45%;
     transform: translate(-50%,-50%);
-    color: white;
-    background: black;
-    width: 90%;
-    max-width: 25rem;
-    padding: 1.5rem;
     -webkit-transform: translate(-50%,-50%);
     -moz-transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
     -o-transform: translate(-50%,-50%);
     font-size: 0.8rem;
+    color: white;
+    background: black;
+    width: 80%;
+    max-width: 25rem;
+    padding: 1.5rem;
 
     >div{
         display: grid;
