--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -4,6 +4,7 @@
     height: 100vh;
     width: 100vw;
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     overflow: hidden;
 }
 
